# Cognitive-Canvas-MCP

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  cognitive_canvas_server.py  demo_comprehensive_tests.py  publish.bat  publish.ps1  pyproject.toml  requirements.txt  server.py  test_improved_output.py  test_notes_display.py
cognitive_canvas_mcp/: __init__.py  server.py
tests/: run_all_tests.py  test_chat_fork.py  test_chat_fork_bookmark.py  test_chat_fork_integrated_matches.py  test_chat_fork_notes_integration.py  test_chat_fork_search.py  test_chi_square.py  test_diagram_tool.py  test_notes.py  test_notes_relevance_scoring.py  test_notes_semantic_accuracy.py  test_notes_semantic_search_advanced.py  test_notes_semantic_search_performance.py  test_relationship_mapper.py  test_relationship_mapper_workspace.py  test_relevance_score_validation.py  test_server.py  test_statistical_analyze_chi_square.py  test_statistical_analyzer.py  test_statistical_analyzer_json_output.py  test_statistical_analyzer_workspace.py  test_statistical_evidence.py  test_structured_knowledge_tool.py  test_table_builder.py  test_todo_notes_integration.py  test_todo_tool.py
tools/: __init__.py  chat_fork.py  diagram_tool.py  display_recommendations.py  math_tools.py  notes.py  relationship_mapper.py  semantic_search.py  statistical_analyzer.py  statistical_evidence.py  structured_knowledge_tool.py  table_builder.py  todo_tool.py
