[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-canvas-mcp"
version = "0.1.0"
description = "MCP server for cognitive workspace and task management"
authors = [{name = "OsmondJiang", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=2.11.0",
    "pydantic>=2.0.0"
]
keywords = ["mcp", "model-context-protocol", "ai", "assistant", "cognitive", "workspace"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/OsmondJiang/Cognitive-Canvas"
Repository = "https://github.com/OsmondJiang/Cognitive-Canvas"
Issues = "https://github.com/OsmondJiang/Cognitive-Canvas/issues"

[project.scripts]
cognitive-canvas-mcp = "cognitive_canvas_server:main"

[tool.setuptools]
packages = ["tools"]
py-modules = ["cognitive_canvas_server"]
