[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-canvas-mcp"
version = "0.1.3"
description = "MCP server for cognitive workspace, intelligent knowledge management, and task management with semantic search capabilities"
authors = [{name = "OsmondJiang", email = "your.email@example.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=2.11.0",
    "pydantic>=2.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0"
]
keywords = ["mcp", "model-context-protocol", "ai", "assistant", "cognitive", "workspace", "knowledge-management", "semantic-search", "notes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/OsmondJiang/Cognitive-Canvas"
Repository = "https://github.com/OsmondJiang/Cognitive-Canvas"
Issues = "https://github.com/OsmondJiang/Cognitive-Canvas/issues"

[project.scripts]
cognitive-canvas-mcp = "cognitive_canvas_server:main"

[tool.setuptools]
packages = ["tools"]
py-modules = ["cognitive_canvas_server"]
